[package]
name = "search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
rayon = "1.10.0"
scraper = "0.19.0"
reqwest = {version = "0.12.3", features = ["blocking"]}
regex = "1.10.4"
# rust-stemmers = "1.2.0"
lazy_static = "1.4.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5.2", features = ["cors"] }
http = "1.1.0"
